# reaktome

./: .bumpversion.cfg  DESIGN.md  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
reaktome/: __init__.py
src/: _reaktome.c  activation.c  activation.h  dict.c  list.c  obj.c  patch.h  reaktome.c  reaktome.h  set.c
tests/: __init__.py  test_dataclasses.py  test_list.py  test_pydantic.py  test_pydantic_collections.py  test_reaktome.py  test_set.py
