[project]
name = "reaktome"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "build>=1.3.0",
    "bump2version>=1.0.1",
    "flake8>=7.3.0",
    "mypy>=1.18.2",
    "pydantic>=2.11.9",
    "pydantic-collections>=0.6.0",
    "twine>=6.2.0",
]
